--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "graphql": "^16.6.0",
     "graphql-request": "^6.0.0",
     "next": "13.4.1",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.3",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/nprogress": "^0.2.0"
   }
 }
